# read

./: .gitignore  .metadata  AGENTS.md  LICENSE  README.md  analysis_options.yaml  analyze_output.txt  check_syntax.py  codemagic.yaml  fix_isar.py  fix_isar_web.py  flutter.bat  flutter.ps1  last_prompt.txt  patch.diff  progress.md  project.yml  prompt.json  pubspec.yaml  refactor_plan_applyCssSelector.md  search.py  search_results.txt  test_eval.dart  test_extract.dart  test_logic.dart  test_qjs.dart  test_source.dart  test_uri.dart  test_uri2.dart  test_uri3.dart  test_uri4.dart
SourceReadSwiftTests/: BookSourceTests.swift  BookshelfStoreTests.swift  ChapterContentCacheStoreTests.swift  ContentParserTests.swift  HtmlRuleExtractorTests.swift  JSCoreNetworkBridgeTests.swift  JSCoreRuntimeTests.swift  JSONPipelineParserTests.swift  JSONRuleExtractorTests.swift  LocalEPUBBookParserTests.swift  LocalTextBookParserTests.swift  PurifyRuleStoreTests.swift  RSSFeedParserTests.swift  ReaderSettingsModelsTests.swift  ReadingStatsSummaryTests.swift  ResponseTextDecoderTests.swift  RuleExtractorJSTests.swift  SearchResultParserTests.swift  SearchURLResolverTests.swift  SourceCookieStoreTests.swift  SourceEngineBodyJSTests.swift  SourceHealthStoreTests.swift  SourceImportLinkParserTests.swift  SourceStoreTests.swift  SourceURLDirectiveTests.swift
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt
d/: 1.json  1.md  1.source.js  1780804736.json  1780804782.json  1780804782.source.js  3a.source.js  test_option.js  (+4 more)
(+380 files in other folders)
